syntax = "proto3";

option csharp_namespace = "Clients";



service ClientService {
  rpc RecvMsg (RecvMsgRequest) returns (RecvMsgReply);
}

message RecvMsgRequest {
  string msg = 1;
}
message RecvMsgReply {
	bool ok = 1;
}

service ServerService {
	rpc Write (WriteRequest) returns (WriteResponse);
	rpc Read (ReadRequest) returns (ReadResponse);
	rpc ListServer (ListServerRequest) returns (ListServerResponse);
	rpc ListGlobal (ListGlobalRequest) returns (ListGlobalResponse);
	rpc Wait (WaitRequest) returns (WaitResponse);
	rpc BeginRepeat (BeginRepeatRequest) returns (BeginRepeatResponse);
	rpc EndRepeat (EndRepeatRequest) returns (EndRepeatResponse);
	
}

message UniqueKey{
	string partitionId = 1;
	string objectId = 2;
}

message Object{
	UniqueKey uniqueKey = 1;
	string value = 2;
}

message WriteRequest{
	Object object = 1;
}

message WriteResponse{
	bool ok = 1; 
}

message ReadRequest{
	UniqueKey uniqueKey = 1;
	string server_id = 2;
}

message ReadResponse{
	string value = 1;
}

message ListServerObj{
	Object object = 1;
	bool isMaster = 2;
}

message ListServerRequest{
	string server_id = 1;
}

message ListServerResponse{
	repeated ListServerObj listServerObj = 1;	
}

message ListEachGlobalRequest{
	string server_id = 1;
}
message ListEachGlobalResponse{
	repeated UniqueKey uniqueKeyList = 1;
}

message ListGlobalRequest{

}

message ListGlobalResponse{
	repeated UniqueKey uniqueKeyList = 1;
}

message WaitRequest{
	int32 x = 1;
}

message WaitResponse{
	string waitingTime = 1;
}

message BeginRepeatRequest{
	int32 x = 1;
}

message BeginRepeatResponse{
	string repeatValue = 1;
}

message EndRepeatRequest{

}

message EndRepeatResponse{
	string endRepeat = 1;
}