syntax = "proto3";

service ServerService {
	rpc Register (ClientRegisterRequest) returns (ClientRegisterReply);
	rpc BcastMsg (BcastMsgRequest) returns (BcastMsgReply);
	rpc Write (WriteRequest) returns (WriteResponse);
	rpc Read (ReadRequest) returns (ReadResponse);
	rpc ListServer (ListServerRequest) returns (ListServerResponse);
	rpc ListEachGlobal (ListEachGlobalRequest) returns (ListEachGlobalResponse);
	rpc ListGlobal (ListGlobalRequest) returns (ListGlobalResponse);
	rpc Wait (WaitRequest) returns (WaitResponse);
	rpc BeginRepeat (BeginRepeatRequest) returns (BeginRepeatResponse);
	rpc EndRepeat (EndRepeatRequest) returns (EndRepeatResponse);
}
message ClientRegisterRequest {
  string nick = 1;
  string url = 2;	
}
message ClientRegisterReply {
	repeated User users = 1;
}
message User {
   string nick = 1;
}

message BcastMsgRequest {
  string nick = 1;
  string msg = 2;	
}
message BcastMsgReply {
	bool ok = 1;
}

message UniqueKey{
	int32 partitionId = 1;
	int32 objectId = 2;
}

message Object{
	UniqueKey uniqueKey = 1;
	string value = 2;
}

message WriteRequest{
	Object object = 1;
}

message WriteResponse{
	bool ok = 1; 
}

message ReadRequest{
	UniqueKey uniqueKey = 1;
	int32 server_id = 2;
}

message ReadResponse{
	string value = 1;
}

message ListServerObj{
	Object object = 1;
	bool isMaster = 2;
}

message ListServerRequest{
	int32 server_id = 1;
}

message ListServerResponse{
	repeated ListServerObj listServerObj = 1;	
}

message ListEachGlobalRequest{
	int32 server_id = 1;
}
message ListEachGlobalResponse{
	repeated UniqueKey uniqueKeyList = 1;
}

message ListGlobalRequest{

}

message ListGlobalResponse{
	repeated UniqueKey uniqueKeyList = 1;
}

message WaitRequest{
	int32 x = 1;
}

message WaitResponse{
	string waitingTime = 1;
}

message BeginRepeatRequest{
	int32 x = 1;
}

message BeginRepeatResponse{
	string repeatValue = 1;
}

message EndRepeatRequest{

}

message EndRepeatResponse{
	string endRepeat = 1;
}